Which mac version actually still supports both high sierra and an apple remote? ;-)
I think this should be pretty rare by now, so it might get hard to reproduce / test that setup.
Please also attach logs to the ticket while trying the problem. Did you select "control system volume with apple remote"? If yes, please try disabling that.
Which mac version actually still supports both high sierra and an apple remote? ;-)
I think this should be pretty rare by now, so it might get hard to reproduce / test that setup.
Please also attach logs to the ticket while trying the problem. Did you select "control system volume with apple remote"? If yes, please try disabling that.
i have a mac mini late 2012 updated to mac osx 10.13...using vlc during a film my apple remote that normally with earlier version of mac osx til sierra i can control the reproduction with all 7 buttons...now the volume ones up and down don't work!
i can disable or enable volume system in the options but it doesn't fix anything! i can't attach any file!it gives me no error it simply a button that doesn't respond!there's no error or any logs!
Your fix work like a charm. Thank you.
No problem either if we keep the button pressed. Everything work as expected.
2 very minor remarks not directly related to your fix :
a translation typo in the french version in playback control menu
In "Control system volume mode" a message "macosx warning: we can't set the main audio devices' is emetted in debug log each time volume button is pressed but everything work as expected (it is possible that this message was already there in vlc 2.2.6)