macosx: Try to fix volume buttons with apple remote on 10.13

macOS High Sierra remapped the volume up / down buttons on the
apple remote. This patch tries to fix that by adding the new
cookies.

refs #18894

(cherry picked from commit 6021599dd6b39426b353e67fd6073d6d68353ef4)
Signed-off-by: David Fuhrmann <dfuhrmann@videolan.org>